Updated CMakeLists.txt for shs_ra to pull the machine's env var for the CMake profile.

--- a/examples/shs_channel_flow/CMakeLists.txt
+++ b/examples/shs_channel_flow/CMakeLists.txt
@@ -20,7 +20,12 @@ add_compile_definitions( PRIVATE CASL_THROWS )
 ############################# Load paths to libraries and set compiler for current system ##############################
 
 set( PARCASL ${CMAKE_CURRENT_SOURCE_DIR}/../../ )				# CASL library root directory.
-include( ${PARCASL}/cmake/zea.cmake )							# Set paths for this machine and populate LIBS, INC_DIRS, and LIB_DIRS lists.
+
+if( DEFINED ENV{CASL_CMAKE_PROFILE} )							# Set paths for this machine and populate LIBS, INC_DIRS,
+	include( ${PARCASL}/cmake/$ENV{CASL_CMAKE_PROFILE} )		# and LIB_DIRS lists.  You must create the environment
+else()															# variable CASL_CMAKE_PROFILE.
+	message( FATAL_ERROR "Environment variable CASL_CMAKE_PROFILE is not set!" )
+endif()
 
 if( CMAKE_BUILD_TYPE MATCHES Debug )
 	add_compile_definitions( PRIVATE DEBUG )					# Enable debug macro.
@@ -29,9 +34,11 @@ endif()
 ############################################# Compiler optimization flags ##############################################
 # Comment these out when using debugger.
 
-#set( GCC_COVERAGE_COMPILE_FLAGS "-O2 -O3 -march=native" )
-#set( CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${GCC_COVERAGE_COMPILE_FLAGS}" )
-#set( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${GCC_COVERAGE_COMPILE_FLAGS}" )
+if( CMAKE_BUILD_TYPE MATCHES Release )
+	set( GCC_COVERAGE_COMPILE_FLAGS "-O2 -O3 -march=native" )
+	set( CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${GCC_COVERAGE_COMPILE_FLAGS}" )
+	set( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${GCC_COVERAGE_COMPILE_FLAGS}" )
+endif()
 
 ################################################## Loading libraries ###################################################
 # These commands must be given prior to defining any target.
