Drafted 3d version of hybrid mean curvature solver and tested its sub-code for the 2d case.
So far, it works for 2d.

--- a/examples/ml_curvature/CMakeLists.txt
+++ b/examples/ml_curvature/CMakeLists.txt
@@ -10,7 +10,7 @@ set( CMAKE_CXX_STANDARD 14 )
 if( DIMENSION MATCHES 2d )
 	list( APPEND SRC main_2d.cpp )
 elseif( DIMENSION MATCHES 3d )
-	list( APPEND SRC data_sets/sinusoid/sinusoidal_dataset_3d.cpp )
+	list( APPEND SRC main_3d.cpp )
 else()
 	message( FATAL_ERROR "Invalid or missing DIMENSION macro --it should be '2d' or '3d'." )
 endif()
