First pass at adding a bulk of the fluids stuff to multialloy
Added first pass backtrace capability, started adding NS usage, left some comments for where we need to do more work

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,6 @@
     "files.associations": {
         "stdexcept": "cpp"
     },
-    "editor.fontSize": 10
+    "editor.fontSize": 14,
+    "cmake.sourceDirectory": "${workspaceFolder}/examples/multialloy_with_fluids"
 }
