--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,5 @@
 {
-    "C_Cpp.default.configurationProvider": "go2sh.cmake-integration"
+    "C_Cpp.default.configurationProvider": "go2sh.cmake-integration",
+    "cmake.sourceDirectory": "${workspaceFolder}/examples/multialloy_with_fluids",
+    "cmake.buildDirectory": "/home/elyce/workspace/build/multialloy_with_fluids_cmake/2d"
 }
