--- a/.gitignore
+++ b/.gitignore
@@ -62,3 +62,19 @@ Default/
 
 examples/porous_media/CMakeLists_old.txt
 examples/poisson_nodes_mls_protein/main_2d_heat_const_coeffs_ex6.cpp
+# === Generated paper data & logs ===
+/doc/paper/tex/data/
+
+# === Misc junk ===
+**/.ipynb_checkpoints/
+*.bak
+
+# === Generated paper data & logs ===
+# Robust even if an older rule ignored the whole directory.
+!/doc/paper/tex/data/
+ /doc/paper/tex/data/*
+!/doc/paper/tex/data/.gitkeep
+
+# === Misc junk ===
+**/.ipynb_checkpoints/
+*.bak
