gitignore: keep data/ via .gitkeep; ignore contents, .ipynb_checkpoints, and *.bak

--- a/.gitignore
+++ b/.gitignore
@@ -1,78 +1,5 @@
-# What files to ignore?
-*.creator
-*.config
-*.files
-*.includes
-*.o
-*.out
-*.bin
-*.exe
-*.pro
-*.pro.user*
-*.creator.user*
-*examples/**/*.pri
-!examples/two_phase_flows_validation/two_phase_flows_validation.pri
-CMakeLists.txt.user
-*~
-*.vt[uks]
-*.pvt[uks]
-*.visit
-*.cproject
-*.project
-*.DS_Store
-*._.DS_Store
-*.sw[op]
-*script*
-*.job
-*.pvsm
-*ddt*
-*.aux
-*.fdb_latexmk
-*.log
-*.pdfsync
-*.spl
-*.synctex.gz
-*.bbl
-*.blg
-sync
-.rsync.exclude
-Info.plist
-
-# What directories to ignore
-*[Dd]ebug*
-*[Rr]elease*
-*[Oo]bjs*
-*[Pp]roject[s]*
-*[Bb]uild*
-*[Xx]code*
-Default/
-
-*.orig
-*_BACKUP_*
-*_BASE_*
-*_LOCAL_*
-*_REMOTE_*
-
-# CLion.
-.idea/
-
-# VSCODE 
-.vscode/
-*.json
-
-examples/porous_media/CMakeLists_old.txt
-examples/poisson_nodes_mls_protein/main_2d_heat_const_coeffs_ex6.cpp
-# === Generated paper data & logs ===
-/doc/paper/tex/data/
-
-# === Misc junk ===
-**/.ipynb_checkpoints/
-*.bak
-
-# === Generated paper data & logs ===
-# Robust even if an older rule ignored the whole directory.
-!/doc/paper/tex/data/
- /doc/paper/tex/data/*
+# === Generated paper data (keep dir, ignore contents) ===
+/doc/paper/tex/data/*
 !/doc/paper/tex/data/.gitkeep
 
 # === Misc junk ===
